# bazel_sysroot_lib_arm64

./: Makefile  README.md  default.nix
sysroot/: BUILD.bazel  sysroot.BUILD
