package(default_visibility = ["//visibility:public"])

# Main filegroup that includes everything
filegroup(
    name = "all",
    srcs = [":lib"],
)

# Library directory filegroup
filegroup(
    name = "lib",
    srcs = glob(["lib/**"]),
    allow_empty = True,
)

# ARM64-specific system shared libraries
cc_library(
    name = "system_libs",
    srcs = glob(["lib/*.so*"]),
    linkstatic = 0,
    visibility = ["//visibility:public"],
)

